# msikeyboard-cli

./: .gitignore  CMakeLists.txt  MSIKeyboard.cpp  MSIKeyboard.h  README.md  Region.cpp  Region.h  main.cpp  makearchive.sh  meson.build  msikeyboard-cli.options  msikeyboard-cli.service  msikeyboard-cli.spec
